@@ -19,12 +19,24 @@
         android:visibility="invisible"
         android:layout_above="@+id/buttons" />
  <ProgressBar
-        android:id="@+id/downloadprogress"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        style="@android:style/Widget.ProgressBar.Horizontal"
-        android:layout_above="@+id/numberpickers"/>
-<LinearLayout
+     android:id="@+id/downloadprogress"
+     style="@android:style/Widget.ProgressBar.Horizontal"
+     android:layout_above="@+id/numberpickers"
+     android:layout_width="match_parent"
+     android:layout_height="wrap_content"
+     android:visibility="invisible"/>
+ <TextView
+     android:id="@+id/downloadprogresstext"
+     android:layout_width="match_parent"
+     android:layout_height="wrap_content"
+     android:layout_alignBottom="@id/downloadprogress"
+     android:layout_alignLeft="@id/downloadprogress"
+     android:layout_alignRight="@id/downloadprogress"
+     android:layout_alignTop="@id/downloadprogress"
+     android:background="#00000000"
+     android:paddingLeft="10sp"
+     android:paddingRight="10sp"/>
+ <LinearLayout
         android:id="@+id/numberpickers"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
